--- a/pagina/promociones.html
+++ b/pagina/promociones.html
@@ -22,8 +22,8 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="header.php">Menu</a></li>
-        <li><a href="promociones.php">Promociones</a></li>
-        <li><a href="nosotros.php">Nosotros</a></li>
+        <li><a href="promociones.html">Promociones</a></li>
+        <li><a href="nosotros.html">Nosotros</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Salir</a></li>
@@ -92,10 +92,10 @@
 
                 <ul class="list-unstyled mb-0">
                 <li>
-                <a href="Promociones.php" class="text-dark">Promociones</a>
+                <a href="Promociones.html" class="text-dark">Promociones</a>
                 </li>
                 <li>
-                <a href="nosotros.php" class="text-dark">Nosotros</a>
+                <a href="nosotros.html" class="text-dark">Nosotros</a>
                 </li>
         </div>
 
