--- a/pagina/nosotros.html
+++ b/pagina/nosotros.html
@@ -21,7 +21,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="header.php">Menu</a></li>
+        <li class="active"><a href="header.html">Menu</a></li>
         <li><a href="promociones.html">Promociones</a></li>
         <li><a href="nosotros.html">Nosotros</a></li>
       </ul>
