--- a/pagina/promociones.html
+++ b/pagina/promociones.html
@@ -17,11 +17,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="header.php">Delivery Andahuylas</a>
+      <a class="navbar-brand" href="header.html">Delivery Andahuylas</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="header.php">Menu</a></li>
+        <li class="active"><a href="header.html">Menu</a></li>
         <li><a href="promociones.html">Promociones</a></li>
         <li><a href="nosotros.html">Nosotros</a></li>
       </ul>
