--- a/pagina/header.html
+++ b/pagina/header.html
@@ -14,6 +14,19 @@
       background-color: #f2f2f2;
       padding: 25px;
     }
+    .bg-light{
+            color: #0D9B19;  
+            vertical-align: middle;
+            text-shadow: #111 0px 0px 10px;        
+          }
+
+      .container.text-center{
+        color: #b61558;
+      }
+      .well{
+        color: #2dcc8fdc;
+        vertical-align: middle;
+      }
 
     .carousel-inner img {
       width: 100%; /* la imagen al 100% */
@@ -37,7 +50,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="header.html">Delivery Andahuylas</a>
+      <a class="navbar-brand" href="">Delivery Andahuylas</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
@@ -46,7 +59,7 @@
         <li><a href="nosotros.html">Nosotros</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="salir.php"><span class="glyphicon glyphicon-log-in"></span> Salir</a></li>
+        <li><a href="../logout.php"><span class="glyphicon glyphicon-log-in"></span> Salir</a></li>
       </ul>
       </div>
     </div>
@@ -138,12 +151,12 @@
 </div>
 
 <div class="container text-center">    
-  <h1>Menu Hamburguesas</h1>
+  <h1>Menú Hamburguesas</h1>
   <br>
   <div class="row">
     <div class="col-sm-3">
       <img src="../pagina/img/hambur1.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <li><a href="../pagina/pedido.php">  <span class="glyphicon glyphicon-log-in"></span> Agregar</a></li>
+      <li><a href="../pagina/pedido.php">  <span class="glyphicon glyphicon glyphicon-shopping-cart "></span> Agregar</a></li>
       <div class="carousel-caption">
             <h3> S/. 10.00 </h3>
             <p>Combo Personal + Gaseosa Personal<p>
@@ -151,7 +164,7 @@
     </div>
     <div class="col-sm-3"> 
       <img src="../pagina/img/hambur2.jpg"class="img-responsive" style="width:100%" alt="Image">
-      <button type="button" class="btn btn-primary btn-lg">Agregar</button> 
+      <li><a href="../pagina/pedido.php">  <span class="glyphicon glyphicon glyphicon-shopping-cart"></span> Agregar</a></li>
       <div class="carousel-caption">
             <h3> S/. 30.00 </h3>
             <p>Hamburguesa Clásica + Hamburguesa Royal + 3 Papas Fritas<p>
@@ -159,7 +172,7 @@
     </div>
     <div class="col-sm-3">
       <img src="../pagina/img/hambur3.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <button type="button" class="btn btn-primary btn-lg">Agregar</button>
+      <li><a href="../pagina/pedido.php"><span class="glyphicon glyphicon-shopping-cart"></span> Agregar</a></li>
       <div class="carousel-caption">
             <h3> S/. 20.00 </h3>
             <p>Combo Familiar + 2 Papas Fritas<p>
@@ -167,7 +180,7 @@
     </div>
     <div class="col-sm-3">
       <img src="../pagina/img/hambur4.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <button type="button" class="btn btn-primary btn-lg">Agregar</button>
+      <li><a href="../pagina/pedido.php"><span class="glyphicon glyphicon-shopping-cart"></span> Agregar</a></li>
       <div class="carousel-caption">
             <h3> S/. 30.00 </h3>
             <p>Combo Personal + solitario <p>
@@ -177,78 +190,78 @@
 </div>
 
 <div class="container text-center">    
-  <h1>Menu Pizza</h1>
+  <h1>Menú Pizza</h1>
   <br>
   <div class="row">
     <div class="col-sm-3">
       <img src="../pagina/img/pizza1.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <li><a href="../pagina/pedido.php"><span class="glyphicon glyphicon-log-in"></span> Agregar</a></li><br><br>
+      <li><a href="../pagina/pedido.php"><span class="glyphicon glyphicon-shopping-cart"></span> Agregar</a></li><br><br>
       <div class="carousel-caption"> 
             <h3> S/. 30.00 </h3>
-            <p>Combo Personal + solitario <p>
+            <p>HAWAIANA + Gaseosa <p>
       </div>  
     </div>
     <div class="col-sm-3"> 
       <img src="../pagina/img/pizza2.png"class="img-responsive" style="width:100%" alt="Image">
-      <button type="button" class="btn btn-primary btn-lg">Agregar</button>  
+      <li><a href="../pagina/pedido.php"><span class="glyphicon glyphicon-shopping-cart"></span> Agregar</a></li><br><br>
       <div class="carousel-caption"> 
             <h3> S/. 30.00 </h3>
-            <p>Combo Personal + solitario <p>
+            <p>HUT COMPLETO FAMILIAR + Gaseosa <p>
       </div>  
     </div>
     <div class="col-sm-3">
       <img src="../pagina/img/pizza3.png" class="img-responsive" style="width:100%" alt="Image">
-      <button type="button" class="btn btn-primary btn-lg">Agregar</button>
+      <li><a href="../pagina/pedido.php"><span class="glyphicon glyphicon-shopping-cart"></span> Agregar</a></li><br><br>
       <div class="carousel-caption"> 
             <h3> S/. 30.00 </h3>
-            <p>Combo Personal + solitario <p>
+            <p>COMBO GRANDE + Gaseosa <p>
       </div>  
     </div>
     <div class="col-sm-3">
       <img src="../pagina/img/pizza5.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <button type="button" class="btn btn-primary btn-lg">Agregar</button>
+      <li><a href="../pagina/pedido.php"><span class="glyphicon glyphicon-shopping-cart"></span> Agregar</a></li><br><br>
       <div class="carousel-caption"> 
             <h3> S/. 30.00 </h3>
-            <p>Combo Personal + solitario <p>
+            <p>VEGETARIANO + Gaseosa <p>
       </div>  
     </div>
   </div>
 </div>
 
 <div class="container text-center">    
-  <h1>Menu Chifa</h1>
+  <h1>Menú Chifa</h1>
   <br>
   <div class="row">
     <div class="col-sm-3">
       <img src="../pagina/img/chifa1.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <li><a href="../pagina/pedido.php"><span class="glyphicon glyphicon-log-in"></span> Agregar</a></li>
+      <li><a href="../pagina/pedido.php"><span class="glyphicon glyphicon-shopping-cart"></span> Agregar</a></li><br><br>
       <div class="carousel-caption"> 
             <h3> S/. 30.00 </h3>
-            <p>Combo Personal + solitario <p>
+            <p>DUO COMBINADO TAYPA + Gaseosa <p>
       </div>  
     </div>
     <div class="col-sm-3"> 
       <img src="../pagina/img/chifa2.jpg"class="img-responsive" style="width:100%" alt="Image">
-      <button type="button" class="btn btn-primary btn-lg">Agregar</button>  
+      <li><a href="../pagina/pedido.php"><span class="glyphicon glyphicon-shopping-cart"></span> Agregar</a></li><br><br>
       <div class="carousel-caption"> 
             <h3> S/. 30.00 </h3>
-            <p>Combo Personal + solitario <p>
+            <p>WANTAN CON SALSA TAMARINDO <p>
       </div>  
     </div>
     <div class="col-sm-3">
       <img src="../pagina/img/chifa3.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <button type="button" class="btn btn-primary btn-lg">Agregar</button>
+      <li><a href="../pagina/pedido.php"><span class="glyphicon glyphicon-shopping-cart"></span> Agregar</a></li><br><br>
       <div class="carousel-caption"> 
             <h3> S/. 30.00 </h3>
-            <p>Combo Personal + solitario <p>
+            <p>MOSTRIKUNCH + Gaseosa <p>
       </div>  
     </div>
     <div class="col-sm-3">
       <img src="../pagina/img/chifa4.png" class="img-responsive" style="width:100%" alt="Image">
-      <button type="button" class="btn btn-primary btn-lg">Agregar</button>
+      <li><a href="../pagina/pedido.php"><span class="glyphicon glyphicon-shopping-cart"></span> Agregar</a></li><br><br>
       <div class="carousel-caption"> 
             <h3> S/. 30.00 </h3>
-            <p>Combo Personal + solitario <p>
+            <p>COMBINADO TAYPA + Gaseosa <p>
       </div>  
     </div>
   </div>
@@ -263,10 +276,12 @@
     <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
       <h5 class="text-uppercase">Delyvery Andahuaylas</h5>
       <p>
-          servicios de Delivery Andahuaylas, ofrece todo tipo de comidas, y 
-          de la mejor calidad, nuestro servicio es rápido y eficiente, tomando 
-          en cuenta los más altos estándares internacionales en cuanto a control 
-          de calidad de todos los productos que se ofrece y con el debido protocolo de seguridad.
+        Servicios de Delivery Thomy, ofrece todo tipo de comidas, y 
+        de la mejor calidad, nuestro servicio es rápido y eficiente, tomando 
+        en cuenta los más altos estándares internacionales en cuanto a control 
+        de calidad de todos los productos que se ofrece y con el debido
+        protocolo de seguridad.
+    </p>
       </p>
     </div>
 
@@ -275,10 +290,10 @@
 
                 <ul class="list-unstyled mb-0">
                 <li>
-                <a href="Promociones.html" class="text-dark">Promociones</a>
+                <a href="Promociones.html" class="text-dark glyphicon glyphicon-home"> Promociones</a>
                 </li>
                 <li>
-                <a href="nosotros.html" class="text-dark">Nosotros</a>
+                <a href="nosotros.html" class="text-dark glyphicon glyphicon-home">    Nosotros</a>
                 </li>
         </div>
 
@@ -287,10 +302,10 @@
 
                 <ul class="list-unstyled">
                 <li>
-                    <a href="https://web.facebook.com" class="text-dark">FACEBOOK</a>
+                    <a href="https://web.facebook.com" class="text-dark   glyphicon glyphicon-eye-open "> FACEBOOK</a>
                 </li>
                 <li>
-                    <a href="http://deliveryandahuaylas.rf.gd" class="text-dark">PÁGINA WEB</a>
+                    <a href="http://deliveryandahuaylas.rf.gd" class="text-dark  glyphicon glyphicon-eye-open "> PÁGINA WEB</a>
                 </li>
                 </ul>
       </div>
