--- a/pagina/promociones.html
+++ b/pagina/promociones.html
@@ -7,6 +7,26 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+    <style>
+      /* estilos  */
+      footer {
+        background-color: #f2f2f2;
+        padding: 25px;
+      }
+      .bg-light{
+              color: #0D9B19;  
+              vertical-align: middle;
+              text-shadow: #111 0px 0px 10px;        
+            }
+            .container.text-center{
+        color: #5e0a77;
+      }
+      .well{
+        color: #2dcc8fdc;
+        vertical-align: middle;
+      }
+    </style>
 </head>
 <body>
     <nav class="navbar navbar-inverse">
@@ -17,7 +37,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="header.html">Delivery Andahuylas</a>
+      <a class="navbar-brand" href="">Delivery Andahuylas</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
@@ -26,7 +46,7 @@
         <li><a href="nosotros.html">Nosotros</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Salir</a></li>
+        <li><a href="../logout.php"><span class="glyphicon glyphicon-log-in"></span> Salir</a></li>
       </ul>
     </div>
   </div>
@@ -40,7 +60,7 @@
   <div class="row">
     <div class="col-sm-3">
       <img src="../pagina/img/hambur1.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <li><a href="../pagina/pedido.php"><span class="glyphicon glyphicon-log-in"></span> Agregar</a></li>
+      <li><a href="../pagina/pedido.php">  <span class="glyphicon glyphicon glyphicon-shopping-cart "></span> Agregar</a></li>
       <div class="carousel-caption">
             <h3> S/. 10.00 </h3>
             <p>Combo Personal + Gaseosa Personal<p>
@@ -48,7 +68,7 @@
     </div>
     <div class="col-sm-3"> 
       <img src="../pagina/img/hambur2.jpg"class="img-responsive" style="width:100%" alt="Image">
-      <button type="button" class="btn btn-primary btn-lg">Agregar</button> 
+      <li><a href="../pagina/pedido.php">  <span class="glyphicon glyphicon glyphicon-shopping-cart "></span> Agregar</a></li>
       <div class="carousel-caption">
             <h3> S/. 30.00 </h3>
             <p>Hamburguesa Clásica + Hamburguesa Royal + 3 Papas Fritas<p>
@@ -73,46 +93,48 @@
 
 <footer class="bg-light text-center text-lg-start">
 
-<div class="container p-4">
-
-  <div class="row">
-    
-    <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-      <h5 class="text-uppercase">Delyvery Andahuaylas</h5>
-      <p>
-          servicios de Delivery Andahuaylas, ofrece todo tipo de comidas, y 
+  <div class="container p-4">
+  
+    <div class="row">
+      
+      <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+        <h5 class="text-uppercase">Delyvery Andahuaylas</h5>
+        <p>
+          Servicios de Delivery Thomy, ofrece todo tipo de comidas, y 
           de la mejor calidad, nuestro servicio es rápido y eficiente, tomando 
           en cuenta los más altos estándares internacionales en cuanto a control 
-          de calidad de todos los productos que se ofrece y con el debido protocolo de seguridad.
+          de calidad de todos los productos que se ofrece y con el debido
+          protocolo de seguridad.
       </p>
-    </div>
-
-        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                <h5 class="text-uppercase">Nuestro Servicio</h5>
-
-                <ul class="list-unstyled mb-0">
-                <li>
-                <a href="Promociones.html" class="text-dark">Promociones</a>
-                </li>
-                <li>
-                <a href="nosotros.html" class="text-dark">Nosotros</a>
-                </li>
-        </div>
-
-        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-         <h5 class="text-uppercase mb-0">encuentranos en:</h5>
-
-                <ul class="list-unstyled">
-                <li>
-                    <a href="https://web.facebook.com" class="text-dark">FACEBOOK</a>
-                </li>
-                <li>
-                    <a href="http://deliveryandahuaylas.rf.gd" class="text-dark">PÁGINA WEB</a>
-                </li>
-                </ul>
+        </p>
       </div>
+  
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                  <h5 class="text-uppercase">Nuestro Servicio</h5>
+  
+                  <ul class="list-unstyled mb-0">
+                  <li>
+                  <a href="Promociones.html" class="text-dark glyphicon glyphicon-home"> Promociones</a>
+                  </li>
+                  <li>
+                  <a href="nosotros.html" class="text-dark glyphicon glyphicon-home">    Nosotros</a>
+                  </li>
+          </div>
+  
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+           <h5 class="text-uppercase mb-0">encuentranos en:</h5>
+  
+                  <ul class="list-unstyled">
+                  <li>
+                      <a href="https://web.facebook.com" class="text-dark   glyphicon glyphicon-eye-open "> FACEBOOK</a>
+                  </li>
+                  <li>
+                      <a href="http://deliveryandahuaylas.rf.gd" class="text-dark  glyphicon glyphicon-eye-open "> PÁGINA WEB</a>
+                  </li>
+                  </ul>
+        </div>
+       </div>
      </div>
-   </div>
-   </footer>
+     </footer>
 </body>
 </html>
