--- a/pagina/header.html
+++ b/pagina/header.html
@@ -182,7 +182,7 @@
       <img src="../pagina/img/hambur4.jpg" class="img-responsive" style="width:100%" alt="Image">
       <li><a href="../pagina/pedido.php"><span class="glyphicon glyphicon-shopping-cart"></span> Agregar</a></li>
       <div class="carousel-caption">
-            <h3> S/. 30.00 </h3>
+            <h3> S/. 15.00 </h3>
             <p>Combo Personal + solitario <p>
       </div>  
     </div>
@@ -194,33 +194,33 @@
   <br>
   <div class="row">
     <div class="col-sm-3">
-      <img src="../pagina/img/pizza1.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <li><a href="../pagina/pedido.php"><span class="glyphicon glyphicon-shopping-cart"></span> Agregar</a></li><br><br>
-      <div class="carousel-caption"> 
-            <h3> S/. 30.00 </h3>
+      <img src="../pagina/img/pizza1.jpg"  class="img-responsive" style="width:100%" alt="Image">
+      <li><a href="../pagina/pedido.php">  <span class="glyphicon glyphicon glyphicon-shopping-cart "></span> Agregar</a></li>
+      <div class="carousel-caption">
+            <h3> S/. 25.00 </h3>
             <p>HAWAIANA + Gaseosa <p>
       </div>  
     </div>
     <div class="col-sm-3"> 
-      <img src="../pagina/img/pizza2.png"class="img-responsive" style="width:100%" alt="Image">
-      <li><a href="../pagina/pedido.php"><span class="glyphicon glyphicon-shopping-cart"></span> Agregar</a></li><br><br>
-      <div class="carousel-caption"> 
-            <h3> S/. 30.00 </h3>
+      <img src="../pagina/img/pizza2.png" class="img-responsive" style="width:100%" alt="Image">
+      <li><a href="../pagina/pedido.php">  <span class="glyphicon glyphicon glyphicon-shopping-cart"></span> Agregar</a></li>
+      <div class="carousel-caption">
+            <h3> S/. 35.00 </h3>
             <p>HUT COMPLETO FAMILIAR + Gaseosa <p>
       </div>  
     </div>
     <div class="col-sm-3">
       <img src="../pagina/img/pizza3.png" class="img-responsive" style="width:100%" alt="Image">
-      <li><a href="../pagina/pedido.php"><span class="glyphicon glyphicon-shopping-cart"></span> Agregar</a></li><br><br>
-      <div class="carousel-caption"> 
-            <h3> S/. 30.00 </h3>
+      <li><a href="../pagina/pedido.php"><span class="glyphicon glyphicon-shopping-cart"></span> Agregar</a></li>
+      <div class="carousel-caption">
+            <h3> S/. 40.00 </h3>
             <p>COMBO GRANDE + Gaseosa <p>
       </div>  
     </div>
     <div class="col-sm-3">
       <img src="../pagina/img/pizza5.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <li><a href="../pagina/pedido.php"><span class="glyphicon glyphicon-shopping-cart"></span> Agregar</a></li><br><br>
-      <div class="carousel-caption"> 
+      <li><a href="../pagina/pedido.php"><span class="glyphicon glyphicon-shopping-cart"></span> Agregar</a></li>
+      <div class="carousel-caption">
             <h3> S/. 30.00 </h3>
             <p>VEGETARIANO + Gaseosa <p>
       </div>  
@@ -228,42 +228,46 @@
   </div>
 </div>
 
+
 <div class="container text-center">    
   <h1>Menú Chifa</h1>
   <br>
   <div class="row">
     <div class="col-sm-3">
       <img src="../pagina/img/chifa1.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <li><a href="../pagina/pedido.php"><span class="glyphicon glyphicon-shopping-cart"></span> Agregar</a></li><br><br>
-      <div class="carousel-caption"> 
-            <h3> S/. 30.00 </h3>
+      <li><a href="../pagina/pedido.php">  <span class="glyphicon glyphicon glyphicon-shopping-cart "></span> Agregar</a></li>
+      <div class="carousel-caption">
+            <h3> S/. 18.00 </h3>
             <p>DUO COMBINADO TAYPA + Gaseosa <p>
       </div>  
     </div>
     <div class="col-sm-3"> 
-      <img src="../pagina/img/chifa2.jpg"class="img-responsive" style="width:100%" alt="Image">
-      <li><a href="../pagina/pedido.php"><span class="glyphicon glyphicon-shopping-cart"></span> Agregar</a></li><br><br>
-      <div class="carousel-caption"> 
-            <h3> S/. 30.00 </h3>
+      <img src="../pagina/img/chifa2.jpg" class="img-responsive" style="width:100%" alt="Image">
+      <li><a href="../pagina/pedido.php">  <span class="glyphicon glyphicon glyphicon-shopping-cart"></span> Agregar</a></li>
+      <div class="carousel-caption">
+            <h3> S/. 20.00 </h3>
             <p>WANTAN CON SALSA TAMARINDO <p>
       </div>  
     </div>
     <div class="col-sm-3">
       <img src="../pagina/img/chifa3.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <li><a href="../pagina/pedido.php"><span class="glyphicon glyphicon-shopping-cart"></span> Agregar</a></li><br><br>
-      <div class="carousel-caption"> 
-            <h3> S/. 30.00 </h3>
+      <li><a href="../pagina/pedido.php"><span class="glyphicon glyphicon-shopping-cart"></span> Agregar</a></li>
+      <div class="carousel-caption">
+            <h3> S/. 14.00 </h3>
             <p>MOSTRIKUNCH + Gaseosa <p>
       </div>  
     </div>
     <div class="col-sm-3">
       <img src="../pagina/img/chifa4.png" class="img-responsive" style="width:100%" alt="Image">
-      <li><a href="../pagina/pedido.php"><span class="glyphicon glyphicon-shopping-cart"></span> Agregar</a></li><br><br>
-      <div class="carousel-caption"> 
-            <h3> S/. 30.00 </h3>
+      <li><a href="../pagina/pedido.php"><span class="glyphicon glyphicon-shopping-cart"></span> Agregar</a></li>
+      <div class="carousel-caption">
+            <h3> S/. 16.00 </h3>
             <p>COMBINADO TAYPA + Gaseosa <p>
       </div>  
     </div>
+  </div>
+</div>
+
   </div>
 </div>
 
