--- a/pagina/header.html
+++ b/pagina/header.html
@@ -129,6 +129,7 @@
       </a>
     </div>
   </div>
+    <h1>OFRECEMOS</h1>
   <div class="col-sm-4">
     <div class="well">
       <p>HAMBURGUESAS</p>
