--- a/pagina/nosotros.html
+++ b/pagina/nosotros.html
@@ -57,8 +57,8 @@
   <h1>Nosotros</h1>
     <p>
       Nuestra experiencia y personal nos respalda. Nuestros 
-      clientes estan satisfechos después de trabajar para ellos 
-      y ver lo que podemos lograr. 
+      clientes estan satisfecho con el servicio que brinda nuestra epmpresa. 
+      Gracias por confiar en Delyvery Thomy
     </p>
   <br>
   <h3>Nuestro personal</h3>
@@ -83,7 +83,7 @@
     </div>
     <div class="well">
       <p>DAVID ASTUWILLCA RAMOS <br>
-       Vendedor 
+       Repartidor
       </p>
     </div>
   </div>
