--- a/pagina/promociones.html
+++ b/pagina/promociones.html
@@ -55,7 +55,7 @@
 <div class="container text-center">    
   <h1>Promociones</h1>
   <br>
-  <h3>Promociones Personales</h3>
+  <h3></h3>
   <br>
   <div class="row">
     <div class="col-sm-3">
@@ -75,6 +75,7 @@
       </div>  
     </div>
     <div class="col-sm-4">
+      <h3>SUPER PROMOCIÓN</h3>
     <div class="well">
       <p>HAMBURGUESAS</p>
     </div>
